--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 </div>
 </div>
-<h3>New domain at: Histordle.online</h3>
+<h3>New domain at: Histordle.online!</h3>
 <h1 id="answer"></h1>
 <h1 id="wronganswer"></h1>
 
