--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
+ <title>Histordle - History Game</title>
  <link rel="stylesheet" href="style.css">
+ <link rel="icon" type="image/x-icon" href="book.png">
 
 </head>
 <body>
+<div id="banner">
 
+</div>
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
@@ -31,7 +34,7 @@
 
 </div>
 </div>
-<h3>New domain at: Histordle.online</h3>
+<h3 id="new">New domain at: Histordle.online</h3>
 <h1 id="answer"></h1>
 <h1 id="wronganswer"></h1>
 
