--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="def">The mongols invaded what in 1650 CE</h3>
+<h3 id="def">ruled over much of western and central Europe from the 9th century to the 19th century.</h3>
 <div id="questions">
 <div class="qinf" id="q1"></div>
 <div class="qinf" id="q2"></div>
