--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <input id="textbox" style="
  color:white;
  font-size: 30px;
- "placeholder="Type the vocabulary word here...">
+ "placeholder="Type the word here...">
  <button id="submit">Submit</button>
 
 </div>
