--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Histordle - History Game</title>
+ <meta property=”og:title”>
  <link rel="stylesheet" href="style.css">
  <link rel="icon" type="image/x-icon" href="book.png">
-
 </head>
 <body>
 <div id="banner">
@@ -15,7 +14,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="def">ruled over much of western and central Europe from the 9th century to the 19th century.</h3>
+<h3 id="def">served as emperor of the Byzantine Empire from 527 to 565.</h3>
 <div id="questions">
 <div class="qinf" id="q1"></div>
 <div class="qinf" id="q2"></div>
@@ -33,7 +32,7 @@
 
 </div>
 </div>
-<h3 id="new">New domain at: Histordle.online</h3>
+<h3 id="new" style="color:coral">TYPE IN LOWERCASE</h3>
 <h1 id="answer"></h1>
 <h1 id="wronganswer"></h1>
 
