--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="def">served as emperor of the Byzantine Empire from 527 to 565.</h3>
+<h3 id="def">The period during the 793-1066 where the _______ went on a conquest and pillage -- this happend notable in Europe and later in North America</h3>
 <div id="questions">
 <div class="qinf" id="q1"></div>
 <div class="qinf" id="q2"></div>
