--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h3 id="new" style="color:coral">TYPE IN LOWERCASE</h3>
 <h1 id="answer"></h1>
 <h1 id="wronganswer"></h1>
-
+<a href="other-games/guesstheyear">play more</a>
 <!-- popup -->
 
 
