mini update: year mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <div id="banner">
 
 </div>
+<div><a id="otherg" href="other-games/guesstheyear">Click Here For: Year Edition</a></div>
+
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
@@ -24,7 +26,6 @@
 </div>
 <div id="container">
  <div id="innerinput">
-
  <input id="textbox" style="
  color:white;
  "placeholder="Type the word here...">
@@ -35,11 +36,12 @@
 <h3 id="new" style="color:coral">TYPE IN LOWERCASE</h3>
 <h1 id="answer"></h1>
 <h1 id="wronganswer"></h1>
-<a href="other-games/guesstheyear">play more</a>
 <!-- popup -->
-
-
-
+<div id="containererror">
+<div id="errortext">
+ <h2>invaild text!</h2>
+</div>
+</div>
 
 
 <!--popup-->
