--- a/other-games/guesstheyear.html
+++ b/other-games/guesstheyear.html
@@ -1,1 +1,58 @@
-<h1>one</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta property=”og:title”>
+ <link rel="stylesheet" href="yeardle.css">
+ <link rel="icon" type="image/x-icon" href="book.png">
+</head>
+<body>
+<div id="banner">
+
+</div>
+<h1 id="logo">HISTORDLE</h1>
+<hr>
+<br>
+<h3 id="question">What year did Genghis Khan start ruling</div></h1>
+<div id="questionboxes">
+ <div class="qbox"><h2 id="b1"></h2></div>
+ <div class="qbox"><h2 id="b2"></h2></div>
+ <div class="qbox"><h2 id="b3"></h2></div>
+ <div class="qbox"><h2 id="b4"></h2></div>
+ <div class="qbox"><h2 id="b5"></h2></div>
+ <div class="qbox"><h2 id="b6"></h2></div>
+</div>
+
+
+
+
+
+<div id="container">
+ <div id="innerinput">
+ <input id="textbox" style="
+ color:white;
+ "placeholder="Type the word here...">
+ <button id="submit">Submit</button>
+
+</div>
+</div>
+<h1 style="color:greenyellow" id="answer"></h1>
+<h1 style="color:red;" id="wronganswer"></h1>
+<!-- popup -->
+
+
+
+
+
+<!--popup-->
+
+
+
+
+
+<!-- no bully i new :(-->
+
+<script src="yeardle.js"></script>
+</body>
+</html>
