--- a/Imagle/imagle.html
+++ b/Imagle/imagle.html
@@ -14,7 +14,7 @@
  </div>
  <div id="inpop">
   <h1 id="main3">Other games</h1>
-  <a class = "extra"href="index.html">Histordle: Classic Edition</a>
+  <a class = "extra"href="/index.html">Histordle: Classic Edition</a>
   <p>In this classic game mode you are given a definition about a event or person in history. You are 
    tasked with figuring out who this is in 5 guesses or less, you are given no hints.
   </p>
