--- a/Imagle/imagle.html
+++ b/Imagle/imagle.html
@@ -35,7 +35,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="question">Who Is This (Learned in chapter 2)</h1>
+<h3 id="Definition of a group of people in history</h1>
 
 <div style="display:flex; justify-content: center; gap: 10px" id="infocontainer"> 
  <img width="600px"src="/images/test.jpg">
