--- a/Yeardle/guesstheyear.html
+++ b/Yeardle/guesstheyear.html
@@ -38,7 +38,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="question">When did the factory system (movement) start?</div></h1>
+<h3 id="question">George Washington (birth)</div></h1>
 <div id="questionboxes">
  <div class="qbox"><h2 id="b1"></h2></div>
  <div class="qbox"><h2 id="b2"></h2></div>
