--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1 id="logo">HISTORDLE</h1>
 <hr>
 <br>
-<h3 id="def">"pioneer in making automobiles affordable for middle-class Americans"</h3>
+<h3 id="def">"Creator of USSR"</h3>
 <div id="questions">
 <div class="qinf" id="q1"></div>
 <div class="qinf" id="q2"></div>
